# mfcc

./: Cargo.toml  README.md
benches/: mfcc_bench.rs
src/: freqs.rs  lib.rs  mfcc.rs  ringbuffer.rs
