[package]
name = "mfcc"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
edition = "2018"
description = "Calculate Mel Frequency Cepstral Coefficients from audio data"
license = "MIT"
categories = ["science"]
repository = "https://github.com/bytesnake/mfcc"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"

[dependencies.fftw]
version = "0.8"
optional = true
features = ["system"]
default_features = false

[dependencies.rustfft]
version = "6"
optional = true

[features]
default = ["fftrust"]

fftrust = ["rustfft"]
fftextern = ["fftw/system"]

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name =  "mfcc_bench"
harness = false
